# abliteration-workflow

./: .env  .gitignore  .pre-commit-config.yaml  AUTOMATED_ABLITERATION_PLAN.md  BRUNO_CLI_CHAT_OPTIONS.md  CLAUDE.md  CLOUD_GPU_STATUS.md  GPU_PCA_IMPLEMENTATION.md  IMPROVEMENT_PLAN.md  LESSONS_LEARNED.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  RUNBOOK.md  WORKFLOW.md  WORKING_COMMANDS.md  config.default.toml  knowledge.md  lambda_connection.txt  pyproject.toml  start-abliteration.ps1
.github/workflows/: ci.yml  codeql.yml  lint.yml  test.yml
claudedocs/: ACCESSIBLE_NAMING_OPTIONS.md  BRUNO_MIGRATION_PLAN.md  BRUNO_NAMING_EXPLORATION.md  C4_STREAMING.md  HERETIC_WORKFLOW_MERMAID.md  PROJECT_NAMING_EXPLORATION.md  REFINED_NAMING_OPTIONS.md  cache_error_handling.md  layer_wise_cache_implementation.md
configs/: README.md  config.moonlight.toml
docs/: ABLITERATION_CHECKLIST.md  ARCHITECTURE.md  EXPANSION_OPPORTUNITIES.md  HUGGINGFACE_DEPLOYMENT_GUIDE.md  IMPROVEMENT_PLAN.md  INFERENCE_DEPLOYMENT.md  MOE_ABLITERATION_RESEARCH.md  MOE_GATE_ABLITERATION_PLAN.md  MOONLIGHT_ABLITERATION_PLAN.md  MOONLIGHT_REABLITERATION_V2_PLAN.md  MOONLIGHT_V2_SESSION_LOG.md  MULTI_FIDELITY_EVAL_PLAN.md  NEXT_LEVEL_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  RUNPOD_32B_PLAN.md  STREAMING_OPPORTUNITIES.md  TECHNICAL_DEBT.md  VASTAI_WORKFLOW_IMPROVEMENTS.md
docs/archive/: BRUNO_MIGRATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  (+8 more)
examples/: chat_app.py  monitor_app.py
scripts/: auto_abliterate.sh  generate_checksums.py  verify_checksums.py  visualize_study.py
tests/: conftest.py
(+57 files in other folders)
